--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Deep SiMLR"
-version = "0.0.1"
+name = "DeepSiMLR"
+version = "0.0.0"
 description = "Interpretable, similarity-driven multi-view embeddings from high-dimensional biomedical data."
 readme = "README.md"
 authors = [{name = "Nick Tustison", email = "ntustison@gmail.com"},
@@ -26,7 +26,7 @@ dependencies = [
     "jax",
     "optax",
     "jaxopt",
-    "normalizing-flows @ git+https://github.com/ntustison/normalizing-flows.git@master"
+    "normflows @ git+https://github.com/ntustison/normalizing-flows.git@master"
     ]
 
 [project.urls]
