--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "DeepSiMLR"
+name = "ANTsTorch"
 version = "0.0.0"
-description = "Interpretable, similarity-driven multi-view embeddings from high-dimensional biomedical data."
+description = "PyTorch-based ANTsX Utilities"
 readme = "README.md"
 authors = [{name = "Nick Tustison", email = "ntustison@gmail.com"},
            {name = "Brian Avants", email = "stnava@gmail.com"}]
@@ -18,6 +18,7 @@ classifiers = [
 dependencies = [
     "antspyx",
     "torch",
+    "torchvision",
     "scikit-learn",
     "numpy",
     "requests",
@@ -30,5 +31,5 @@ dependencies = [
     ]
 
 [project.urls]
-"Homepage" = "https://github.com/ntustison/DeepSiMR"
+"Homepage" = "https://github.com/ntustison/ANTsTorch"
 
