CI: Same cache path

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,6 @@ jobs:
       - name: Set cache location and compute key
         id: compute-key
         run: |
-          echo "ANTSTORCH_CACHE_DIR=${{ runner.temp }}/.antstorch" >> "$GITHUB_ENV"
           KEY="antstorch-${{ hashFiles(
             'antstorch/utilities/get_antstorch_data.py',
             'antstorch/utilities/get_pretrained_network.py'
@@ -43,7 +42,7 @@ jobs:
         uses: actions/cache/restore@v5
         with:
           key: ${{ steps.compute-key.outputs.cache-key }}
-          path: ${{ env.ANTSTORCH_CACHE_DIR }}
+          path: ~/.antstorch
           lookup-only: true
 
       - name: Cache hit — skip download
@@ -74,7 +73,7 @@ jobs:
         if: steps.restore-cache.outputs.cache-hit != 'true'
         run: |
           pip install -e .
-          python tools/download_antstorch_data.py --strict --cache-dir ${{ env.ANTSTORCH_CACHE_DIR }}
+          python tools/download_antstorch_data.py --strict
 
       - name: Save newly downloaded ANTsTorch data to cache
         if: steps.restore-cache.outputs.cache-hit != 'true'
